--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-#           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
-          platforms: llinux/amd64
+          platforms: linux/amd64,linux/arm,linux/arm64
           pull: true
           push: true
           tags: |
