--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64,linux/arm,linux/arm64
+#           platforms: linux/amd64,linux/arm,linux/arm64
+          platforms: linux/amd64
           pull: true
           push: true
           tags: |
